[ADD] Paser tests --> AddIngredientToStock

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -43,6 +43,7 @@ REC_FUNC		=	generic/
 
 SRC 	= 	$(REC_FUNC)redirect.cpp										\
 			$(TEST_SRC)$(RECEPTION_PATH)t_arguments_handler.cpp			\
+			$(TEST_SRC)$(RECEPTION_PATH)t_parser.cpp					\
 			$(TEST_SRC)$(RECEPTION_PATH)t_usage.cpp
 
 OBJ 	= 	$(SRC:.cpp=.o)
