[ADD] unit tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -45,7 +45,8 @@ SRC 	= 	$(REC_FUNC)redirect.cpp										\
 			$(TEST_SRC)$(RECEPTION_PATH)t_arguments_handler.cpp			\
 			$(TEST_SRC)$(RECEPTION_PATH)t_parser.cpp					\
 			$(TEST_SRC)$(RECEPTION_PATH)t_reception.cpp					\
-			$(TEST_SRC)$(RECEPTION_PATH)t_usage.cpp
+			$(TEST_SRC)$(RECEPTION_PATH)t_usage.cpp						\
+			$(TEST_SRC)$(KITCHEN_PATH)t_kitchen.cpp						\
 
 OBJ 	= 	$(SRC:.cpp=.o)
 
